--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Eterhox's Page</title>
         <meta charset="UTF-8">
     </info>
-<link ref="stylesheet" rel="/styles/first/1.css">
+<link rel="stylesheet" href="/styles/first/1.css">
 <body>
 <first>
     <town>
